python-compiler/tests/snapshots/lib__integration__fibonacci_like_function.snap
---
source: tests/integration.rs
expression: llvm_ir
---
; ModuleID = 'main'
source_filename = "main"

@int_format_string = private unnamed_addr constant [4 x i8] c"%d\0A\00", align 1

; Function Attrs: mustprogress nofree norecurse nosync nounwind willreturn memory(none)
define i64 @compute(i64 %0) local_unnamed_addr #0 {
entry:
  %check_qnan = and i64 %0, 9221120237041090560
  %is_float.not.not = icmp eq i64 %check_qnan, 9221120237041090560
  %extract_payload = and i64 %0, 281474976710655
  %is_negative.not = icmp ult i64 %extract_payload, 140737488355328
  %masksel = select i1 %is_negative.not, i64 0, i64 -281474976710656
  %signed_payload = or disjoint i64 %masksel, %extract_payload
  %payload_to_f64 = sitofp i64 %signed_payload to double
  %i64_to_f64 = bitcast i64 %0 to double
  %final_payload = select i1 %is_float.not.not, double %payload_to_f64, double %i64_to_f64
  %multmp = fmul double %final_payload, 2.000000e+00
  %payload_to_i64 = fptosi double %multmp to i64
  %payload_masked = and i64 %payload_to_i64, 281474976710655
  %nanboxed = or disjoint i64 %payload_masked, 9221120237041090560
  %float_to_i64 = bitcast double %multmp to i64
  %pyobject = select i1 %is_float.not.not, i64 %nanboxed, i64 %float_to_i64
  %check_qnan19 = and i64 %pyobject, 9221120237041090560
  %is_float20.not.not = icmp eq i64 %check_qnan19, 9221120237041090560
  %extract_payload33 = and i64 %pyobject, 281474976710655
  %is_negative35.not = icmp ult i64 %extract_payload33, 140737488355328
  %masksel58 = select i1 %is_negative35.not, i64 0, i64 -281474976710656
  %signed_payload37 = or disjoint i64 %masksel58, %extract_payload33
  %payload_to_f6438 = sitofp i64 %signed_payload37 to double
  %i64_to_f6432 = bitcast i64 %pyobject to double
  %final_payload39 = select i1 %is_float20.not.not, double %payload_to_f6438, double %i64_to_f6432
  %addtmp = fadd double %final_payload39, 1.000000e+01
  %payload_to_i6451 = fptosi double %addtmp to i64
  %payload_masked52 = and i64 %payload_to_i6451, 281474976710655
  %nanboxed55 = or disjoint i64 %payload_masked52, 9221120237041090560
  %float_to_i6444 = bitcast double %addtmp to i64
  %pyobject56 = select i1 %is_float20.not.not, i64 %nanboxed55, i64 %float_to_i6444
  ret i64 %pyobject56
}

; Function Attrs: nofree nounwind
define noundef i32 @main() local_unnamed_addr #1 {
print_end:
  %printf_int = tail call i32 (ptr, ...) @printf(ptr nonnull dereferenceable(1) @int_format_string, i64 20)
  ret i32 0
}

; Function Attrs: nofree nounwind
declare noundef i32 @printf(ptr nocapture noundef readonly, ...) local_unnamed_addr #1

attributes #0 = { mustprogress nofree norecurse nosync nounwind willreturn memory(none) }
attributes #1 = { nofree nounwind }
