python-compiler/tests/snapshots/lib__integration__input_with_computation.snap
---
source: tests/integration.rs
expression: llvm_ir
---
; ModuleID = 'main'
source_filename = "main"

@scanf_float_format_string = private unnamed_addr constant [4 x i8] c"%lf\00", align 1
@int_format_string = private unnamed_addr constant [4 x i8] c"%d\0A\00", align 1
@float_format_string = private unnamed_addr constant [4 x i8] c"%f\0A\00", align 1

; Function Attrs: mustprogress nofree norecurse nosync nounwind willreturn memory(none)
define i64 @double(i64 %0) local_unnamed_addr #0 {
entry:
  %check_qnan = and i64 %0, 9221120237041090560
  %is_float.not.not = icmp eq i64 %check_qnan, 9221120237041090560
  %i64_to_f64 = bitcast i64 %0 to double
  %extract_payload = and i64 %0, 281474976710655
  %is_negative.not = icmp ult i64 %extract_payload, 140737488355328
  %masksel = select i1 %is_negative.not, i64 0, i64 -281474976710656
  %signed_payload = or disjoint i64 %masksel, %extract_payload
  %payload_to_f64 = sitofp i64 %signed_payload to double
  %final_payload = select i1 %is_float.not.not, double %payload_to_f64, double %i64_to_f64
  %multmp = fmul double %final_payload, 2.000000e+00
  %float_to_i64 = bitcast double %multmp to i64
  %payload_to_i64 = fptosi double %multmp to i64
  %payload_masked = and i64 %payload_to_i64, 281474976710655
  %nanboxed = or disjoint i64 %payload_masked, 9221120237041090560
  %pyobject = select i1 %is_float.not.not, i64 %nanboxed, i64 %float_to_i64
  ret i64 %pyobject
}

; Function Attrs: nofree nounwind
define noundef i32 @main() local_unnamed_addr #1 {
entry:
  %input_tmp = alloca double, align 8
  %scanf_call = call i32 (ptr, ...) @scanf(ptr nonnull @scanf_float_format_string, ptr nonnull %input_tmp)
  %input_value33 = load i64, ptr %input_tmp, align 8
  %check_qnan.i = and i64 %input_value33, 9221120237041090560
  %is_float.not.not.i = icmp eq i64 %check_qnan.i, 9221120237041090560
  %i64_to_f64.i = bitcast i64 %input_value33 to double
  %extract_payload.i = and i64 %input_value33, 281474976710655
  %is_negative.not.i = icmp ult i64 %extract_payload.i, 140737488355328
  %masksel.i = select i1 %is_negative.not.i, i64 0, i64 -281474976710656
  %signed_payload.i = or disjoint i64 %masksel.i, %extract_payload.i
  %payload_to_f64.i = sitofp i64 %signed_payload.i to double
  %final_payload.i = select i1 %is_float.not.not.i, double %payload_to_f64.i, double %i64_to_f64.i
  %multmp.i = fmul double %final_payload.i, 2.000000e+00
  %float_to_i64.i = bitcast double %multmp.i to i64
  %payload_to_i64.i = fptosi double %multmp.i to i64
  %payload_masked.i = and i64 %payload_to_i64.i, 281474976710655
  %nanboxed.i = or disjoint i64 %payload_masked.i, 9221120237041090560
  %pyobject.i = select i1 %is_float.not.not.i, i64 %nanboxed.i, i64 %float_to_i64.i
  %check_qnan = and i64 %pyobject.i, 9221120237041090560
  %is_float.not.not = icmp eq i64 %check_qnan, 9221120237041090560
  %extract_payload = and i64 %pyobject.i, 281474976710655
  %is_negative.not = icmp ult i64 %extract_payload, 140737488355328
  %masksel = select i1 %is_negative.not, i64 0, i64 -281474976710656
  %signed_payload = or disjoint i64 %masksel, %extract_payload
  %payload_to_f64 = sitofp i64 %signed_payload to double
  %i64_to_f64 = bitcast i64 %pyobject.i to double
  %final_payload = select i1 %is_float.not.not, double %payload_to_f64, double %i64_to_f64
  %addtmp = fadd double %final_payload, 5.000000e+00
  %payload_to_i64 = fptosi double %addtmp to i64
  %payload_masked = and i64 %payload_to_i64, 281474976710655
  %nanboxed = or disjoint i64 %payload_masked, 9221120237041090560
  %float_to_i64 = bitcast double %addtmp to i64
  %pyobject = select i1 %is_float.not.not, i64 %nanboxed, i64 %float_to_i64
  %check_qnan9 = and i64 %pyobject, 9221120237041090560
  %is_float10.not = icmp eq i64 %check_qnan9, 9221120237041090560
  %tag_bits11 = lshr i64 %pyobject, 48
  %tag12 = and i64 %tag_bits11, 7
  %is_bool13 = icmp eq i64 %tag12, 1
  %is_string14 = icmp eq i64 %tag12, 2
  %is_list15 = icmp eq i64 %tag12, 3
  %0 = trunc i64 %tag_bits11 to i3
  %1 = select i1 %is_bool13, i3 2, i3 %0
  %2 = select i1 %is_string14, i3 3, i3 %1
  %3 = select i1 %is_list15, i3 -4, i3 %2
  %i64_to_f6422 = bitcast i64 %pyobject to double
  %extract_payload23 = and i64 %pyobject, 281474976710655
  %is_negative25.not = icmp ult i64 %extract_payload23, 140737488355328
  %masksel34 = select i1 %is_negative25.not, i64 0, i64 -281474976710656
  %signed_payload27 = or disjoint i64 %masksel34, %extract_payload23
  %payload_to_f6428 = sitofp i64 %signed_payload27 to double
  %final_payload29 = select i1 %is_float10.not, double %payload_to_f6428, double %i64_to_f6422
  %trunc = select i1 %is_float10.not, i3 %3, i3 1
  switch i3 %trunc, label %print_float [
    i3 3, label %print_string
    i3 0, label %print_int
  ]

print_int:                                        ; preds = %entry
  %to_int = fptosi double %final_payload29 to i64
  %printf_int = call i32 (ptr, ...) @printf(ptr nonnull dereferenceable(1) @int_format_string, i64 %to_int)
  br label %print_end

print_float:                                      ; preds = %entry
  %printf_float = call i32 (ptr, ...) @printf(ptr nonnull dereferenceable(1) @float_format_string, double %final_payload29)
  br label %print_end

print_string:                                     ; preds = %entry
  %payload_to_ptr32 = inttoptr i64 %extract_payload23 to ptr
  %puts = call i32 @puts(ptr nonnull dereferenceable(1) %payload_to_ptr32)
  br label %print_end

print_end:                                        ; preds = %print_string, %print_float, %print_int
  ret i32 0
}

; Function Attrs: nofree nounwind
declare noundef i32 @scanf(ptr nocapture noundef readonly, ...) local_unnamed_addr #1

; Function Attrs: nofree nounwind
declare noundef i32 @printf(ptr nocapture noundef readonly, ...) local_unnamed_addr #1

; Function Attrs: nofree nounwind
declare noundef i32 @puts(ptr nocapture noundef readonly) local_unnamed_addr #1

attributes #0 = { mustprogress nofree norecurse nosync nounwind willreturn memory(none) }
attributes #1 = { nofree nounwind }
