python-compiler/tests/snapshots/lib__integration__multiple_function_calls.snap
---
source: tests/integration.rs
expression: llvm_ir
---
; ModuleID = 'main'
source_filename = "main"

@int_format_string = private unnamed_addr constant [4 x i8] c"%d\0A\00", align 1

; Function Attrs: mustprogress nofree norecurse nosync nounwind willreturn memory(none)
define i64 @f1(i64 %0) local_unnamed_addr #0 {
entry:
  %check_qnan = and i64 %0, 9221120237041090560
  %is_float.not.not = icmp eq i64 %check_qnan, 9221120237041090560
  %extract_payload = and i64 %0, 281474976710655
  %is_negative.not = icmp ult i64 %extract_payload, 140737488355328
  %masksel = select i1 %is_negative.not, i64 0, i64 -281474976710656
  %signed_payload = or disjoint i64 %masksel, %extract_payload
  %payload_to_f64 = sitofp i64 %signed_payload to double
  %i64_to_f64 = bitcast i64 %0 to double
  %final_payload = select i1 %is_float.not.not, double %payload_to_f64, double %i64_to_f64
  %addtmp = fadd double %final_payload, 1.000000e+00
  %payload_to_i64 = fptosi double %addtmp to i64
  %payload_masked = and i64 %payload_to_i64, 281474976710655
  %nanboxed = or disjoint i64 %payload_masked, 9221120237041090560
  %float_to_i64 = bitcast double %addtmp to i64
  %pyobject = select i1 %is_float.not.not, i64 %nanboxed, i64 %float_to_i64
  ret i64 %pyobject
}

; Function Attrs: mustprogress nofree norecurse nosync nounwind willreturn memory(none)
define i64 @f2(i64 %0) local_unnamed_addr #0 {
entry:
  %check_qnan.i = and i64 %0, 9221120237041090560
  %is_float.not.not.i = icmp eq i64 %check_qnan.i, 9221120237041090560
  %extract_payload.i = and i64 %0, 281474976710655
  %is_negative.not.i = icmp ult i64 %extract_payload.i, 140737488355328
  %masksel.i = select i1 %is_negative.not.i, i64 0, i64 -281474976710656
  %signed_payload.i = or disjoint i64 %masksel.i, %extract_payload.i
  %payload_to_f64.i = sitofp i64 %signed_payload.i to double
  %i64_to_f64.i = bitcast i64 %0 to double
  %final_payload.i = select i1 %is_float.not.not.i, double %payload_to_f64.i, double %i64_to_f64.i
  %addtmp.i = fadd double %final_payload.i, 1.000000e+00
  %payload_to_i64.i = fptosi double %addtmp.i to i64
  %payload_masked.i = and i64 %payload_to_i64.i, 281474976710655
  %nanboxed.i = or disjoint i64 %payload_masked.i, 9221120237041090560
  %float_to_i64.i = bitcast double %addtmp.i to i64
  %pyobject.i = select i1 %is_float.not.not.i, i64 %nanboxed.i, i64 %float_to_i64.i
  %check_qnan = and i64 %pyobject.i, 9221120237041090560
  %is_float.not.not = icmp eq i64 %check_qnan, 9221120237041090560
  %extract_payload = and i64 %pyobject.i, 281474976710655
  %is_negative.not = icmp ult i64 %extract_payload, 140737488355328
  %masksel = select i1 %is_negative.not, i64 0, i64 -281474976710656
  %signed_payload = or disjoint i64 %masksel, %extract_payload
  %payload_to_f64 = sitofp i64 %signed_payload to double
  %i64_to_f64 = bitcast i64 %pyobject.i to double
  %final_payload = select i1 %is_float.not.not, double %payload_to_f64, double %i64_to_f64
  %addtmp = fadd double %final_payload, 1.000000e+00
  %payload_to_i64 = fptosi double %addtmp to i64
  %payload_masked = and i64 %payload_to_i64, 281474976710655
  %nanboxed = or disjoint i64 %payload_masked, 9221120237041090560
  %float_to_i64 = bitcast double %addtmp to i64
  %pyobject = select i1 %is_float.not.not, i64 %nanboxed, i64 %float_to_i64
  ret i64 %pyobject
}

; Function Attrs: mustprogress nofree norecurse nosync nounwind willreturn memory(none)
define i64 @f3(i64 %0) local_unnamed_addr #0 {
entry:
  %check_qnan.i.i = and i64 %0, 9221120237041090560
  %is_float.not.not.i.i = icmp eq i64 %check_qnan.i.i, 9221120237041090560
  %extract_payload.i.i = and i64 %0, 281474976710655
  %is_negative.not.i.i = icmp ult i64 %extract_payload.i.i, 140737488355328
  %masksel.i.i = select i1 %is_negative.not.i.i, i64 0, i64 -281474976710656
  %signed_payload.i.i = or disjoint i64 %masksel.i.i, %extract_payload.i.i
  %payload_to_f64.i.i = sitofp i64 %signed_payload.i.i to double
  %i64_to_f64.i.i = bitcast i64 %0 to double
  %final_payload.i.i = select i1 %is_float.not.not.i.i, double %payload_to_f64.i.i, double %i64_to_f64.i.i
  %addtmp.i.i = fadd double %final_payload.i.i, 1.000000e+00
  %payload_to_i64.i.i = fptosi double %addtmp.i.i to i64
  %payload_masked.i.i = and i64 %payload_to_i64.i.i, 281474976710655
  %nanboxed.i.i = or disjoint i64 %payload_masked.i.i, 9221120237041090560
  %float_to_i64.i.i = bitcast double %addtmp.i.i to i64
  %pyobject.i.i = select i1 %is_float.not.not.i.i, i64 %nanboxed.i.i, i64 %float_to_i64.i.i
  %check_qnan.i = and i64 %pyobject.i.i, 9221120237041090560
  %is_float.not.not.i = icmp eq i64 %check_qnan.i, 9221120237041090560
  %extract_payload.i = and i64 %pyobject.i.i, 281474976710655
  %is_negative.not.i = icmp ult i64 %extract_payload.i, 140737488355328
  %masksel.i = select i1 %is_negative.not.i, i64 0, i64 -281474976710656
  %signed_payload.i = or disjoint i64 %masksel.i, %extract_payload.i
  %payload_to_f64.i = sitofp i64 %signed_payload.i to double
  %i64_to_f64.i = bitcast i64 %pyobject.i.i to double
  %final_payload.i = select i1 %is_float.not.not.i, double %payload_to_f64.i, double %i64_to_f64.i
  %addtmp.i = fadd double %final_payload.i, 1.000000e+00
  %payload_to_i64.i = fptosi double %addtmp.i to i64
  %payload_masked.i = and i64 %payload_to_i64.i, 281474976710655
  %nanboxed.i = or disjoint i64 %payload_masked.i, 9221120237041090560
  %float_to_i64.i = bitcast double %addtmp.i to i64
  %pyobject.i = select i1 %is_float.not.not.i, i64 %nanboxed.i, i64 %float_to_i64.i
  %check_qnan = and i64 %pyobject.i, 9221120237041090560
  %is_float.not.not = icmp eq i64 %check_qnan, 9221120237041090560
  %extract_payload = and i64 %pyobject.i, 281474976710655
  %is_negative.not = icmp ult i64 %extract_payload, 140737488355328
  %masksel = select i1 %is_negative.not, i64 0, i64 -281474976710656
  %signed_payload = or disjoint i64 %masksel, %extract_payload
  %payload_to_f64 = sitofp i64 %signed_payload to double
  %i64_to_f64 = bitcast i64 %pyobject.i to double
  %final_payload = select i1 %is_float.not.not, double %payload_to_f64, double %i64_to_f64
  %addtmp = fadd double %final_payload, 1.000000e+00
  %payload_to_i64 = fptosi double %addtmp to i64
  %payload_masked = and i64 %payload_to_i64, 281474976710655
  %nanboxed = or disjoint i64 %payload_masked, 9221120237041090560
  %float_to_i64 = bitcast double %addtmp to i64
  %pyobject = select i1 %is_float.not.not, i64 %nanboxed, i64 %float_to_i64
  ret i64 %pyobject
}

; Function Attrs: nofree nounwind
define noundef i32 @main() local_unnamed_addr #1 {
print_end:
  %printf_int = tail call i32 (ptr, ...) @printf(ptr nonnull dereferenceable(1) @int_format_string, i64 13)
  ret i32 0
}

; Function Attrs: nofree nounwind
declare noundef i32 @printf(ptr nocapture noundef readonly, ...) local_unnamed_addr #1

attributes #0 = { mustprogress nofree norecurse nosync nounwind willreturn memory(none) }
attributes #1 = { nofree nounwind }
